# rust-crud-api

./: Cargo.toml  README
src/: db.rs  errors.rs  jresult.rs  main.rs
src/services/: mod.rs  user.rs
