[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
pg = {package="tokio-postgres", version = "0.7"} 
deadpool-postgres = "0.12"
env_logger="0.11"
log = "0.4"
derive_more = "0.99"
actix-cors = "0.7"
dotenv = "0.15"
